[gd_scene load_steps=15 format=3 uid="uid://cak2vpn16lujs"]

[ext_resource type="Script" path="res://scripts/ui/hud/HUD.gd" id="1_0wxeb"]
[ext_resource type="Texture2D" uid="uid://yyucri88rf6y" path="res://resource/ui/hud/player_variable_bar/player_variable_bar.png" id="2_w56ye"]
[ext_resource type="Script" path="res://scripts/ui/hud/player_endurance_bar.gd" id="4_g22ej"]
[ext_resource type="Script" path="res://scripts/ui/hud/player_health_bar.gd" id="4_ksf7c"]
[ext_resource type="PackedScene" uid="uid://bnlwgpqinumnw" path="res://ui/inventory/inventory.tscn" id="5_ua3kp"]
[ext_resource type="PackedScene" uid="uid://cfykf5o0g2omm" path="res://ui/options_menu.tscn" id="6_mw57f"]
[ext_resource type="PackedScene" uid="uid://b6frd381y8jx3" path="res://ui/game_over_screen.tscn" id="7_b6b1u"]
[ext_resource type="Texture2D" uid="uid://blucbbnnidaro" path="res://resource/ui/cursor/weapon_attack_ready_bar.png" id="8_obqo4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qroae"]
atlas = ExtResource("2_w56ye")
region = Rect2(0, 0, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ludgh"]
atlas = ExtResource("2_w56ye")
region = Rect2(0, 32, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfauq"]
atlas = ExtResource("2_w56ye")
region = Rect2(0, 0, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eibq4"]
atlas = ExtResource("2_w56ye")
region = Rect2(0, 64, 320, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa7yi"]
atlas = ExtResource("8_obqo4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t68yo"]
atlas = ExtResource("8_obqo4")
region = Rect2(16, 0, 16, 16)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0wxeb")

[node name="PlayerVariable" type="VBoxContainer" parent="."]
offset_right = 320.0
offset_bottom = 68.0

[node name="PlayerHealthBar" type="TextureProgressBar" parent="PlayerVariable"]
layout_mode = 2
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = SubResource("AtlasTexture_qroae")
texture_progress = SubResource("AtlasTexture_ludgh")
script = ExtResource("4_ksf7c")

[node name="PlayerEnduranceBar" type="TextureProgressBar" parent="PlayerVariable"]
layout_mode = 2
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = SubResource("AtlasTexture_qfauq")
texture_progress = SubResource("AtlasTexture_eibq4")
script = ExtResource("4_g22ej")

[node name="WeaponAttackReadyBar" type="TextureProgressBar" parent="."]
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(10, 10)
texture_under = SubResource("AtlasTexture_wa7yi")
texture_progress = SubResource("AtlasTexture_t68yo")

[node name="Inventory" parent="." instance=ExtResource("5_ua3kp")]
offset_left = 1.0
offset_top = 6.0
offset_right = 1.0
offset_bottom = 6.0

[node name="GameOverScreen" parent="." instance=ExtResource("7_b6b1u")]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource("6_mw57f")]
visible = false

[node name="Pause" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="Label" type="Label" parent="Pause"]
offset_right = 51.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "PUASE"
